--- a/Source/Blazorise.Bulma/wwwroot/blazorise.bulma.css
+++ b/Source/Blazorise.Bulma/wwwroot/blazorise.bulma.css
@@ -7048,75 +7048,75 @@ li.list-group-item-action {
   opacity: 0.7;
 }
 
-.gap-0 {
+.is-gap-0 {
   gap: 0 !important;
 }
 
-.gap-y-0 {
+.is-gap-y-0 {
   row-gap: 0 !important;
 }
 
-.gap-x-0 {
+.is-gap-x-0 {
   column-gap: 0 !important;
 }
 
-.gap-1 {
+.is-gap-1 {
   gap: 0.25rem !important;
 }
 
-.gap-y-1 {
+.is-gap-y-1 {
   row-gap: 0.25rem !important;
 }
 
-.gap-x-1 {
+.is-gap-x-1 {
   column-gap: 0.25rem !important;
 }
 
-.gap-2 {
+.is-gap-2 {
   gap: 0.5rem !important;
 }
 
-.gap-y-2 {
+.is-gap-y-2 {
   row-gap: 0.5rem !important;
 }
 
-.gap-x-2 {
+.is-gap-x-2 {
   column-gap: 0.5rem !important;
 }
 
-.gap-3 {
+.is-gap-3 {
   gap: 1rem !important;
 }
 
-.gap-y-3 {
+.is-gap-y-3 {
   row-gap: 1rem !important;
 }
 
-.gap-x-3 {
+.is-gap-x-3 {
   column-gap: 1rem !important;
 }
 
-.gap-4 {
+.is-gap-4 {
   gap: 1.5rem !important;
 }
 
-.gap-y-4 {
+.is-gap-y-4 {
   row-gap: 1.5rem !important;
 }
 
-.gap-x-4 {
+.is-gap-x-4 {
   column-gap: 1.5rem !important;
 }
 
-.gap-5 {
+.is-gap-5 {
   gap: 3rem !important;
 }
 
-.gap-y-5 {
+.is-gap-y-5 {
   row-gap: 3rem !important;
 }
 
-.gap-x-5 {
+.is-gap-x-5 {
   column-gap: 3rem !important;
 }
 
